remove rest catalog and reduced size of docker image